# RPIPicoMicroRosServoExp

./: .gitmodules  CMakeLists.txt  README.md  micro_ros.cmake
src/: CMakeLists.txt  Servo.cpp  Servo.h  main.cpp  pico_uart_transport.c  pico_uart_transports.h
uros_ws/src/ros2_servo/: CMakeLists.txt  package.xml
uros_ws/src/ros2_servo/msg/: Servo.msg
uros_ws/src/ros2_servo/scripts/: create_fwws.sh
uros_ws/test/: 1servo.sh  2servos.sh
